добавлена авторизация и каталог товаров
